--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@reduxjs/toolkit": "^1.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "unsplash-js": "^7.0.15"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
